TP2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> elementos
Rule 1     elementos -> elementos elemento
Rule 2     elementos -> elementos vids
Rule 3     elementos -> <empty>
Rule 4     elemento -> ELEMENTO NUMERO texto tipo area
Rule 5     tipo -> TIPO texto
Rule 6     tipo -> <empty>
Rule 7     area -> AREA texto sin
Rule 8     area -> AREA texto var
Rule 9     area -> AREA texto lingua
Rule 10    lingua -> LINGUA texto lingua
Rule 11    lingua -> LINGUA texto nota
Rule 12    lingua -> LINGUA texto vids
Rule 13    lingua -> LINGUA texto
Rule 14    sin -> SIN texto lingua
Rule 15    sin -> SIN texto var
Rule 16    vids -> vid
Rule 17    vid -> VID texto » texto
Rule 18    vid -> VID texto » texto vid
Rule 19    var -> VAR texto lingua
Rule 20    nota -> NOTA texto vids
Rule 21    nota -> NOTA texto
Rule 22    texto -> TEXTO texto
Rule 23    texto -> NUMERO texto
Rule 24    texto -> TEXTO

Terminals, with rules where they appear

AREA                 : 7 8 9
ELEMENTO             : 4
LINGUA               : 10 11 12 13
NOTA                 : 20 21
NUMERO               : 4 23
SIN                  : 14 15
TEXTO                : 22 24
TIPO                 : 5
VAR                  : 19
VID                  : 17 18
error                : 
»                    : 17 18

Nonterminals, with rules where they appear

area                 : 4
elemento             : 1
elementos            : 1 2 0
lingua               : 9 10 14 19
nota                 : 11
sin                  : 7
texto                : 4 5 7 8 9 10 11 12 13 14 15 17 17 18 18 19 20 21 22 23
tipo                 : 4
var                  : 8 15
vid                  : 16 18
vids                 : 2 12 20

Parsing method: LALR

state 0

    (0) S' -> . elementos
    (1) elementos -> . elementos elemento
    (2) elementos -> . elementos vids
    (3) elementos -> .

    ELEMENTO        reduce using rule 3 (elementos -> .)
    VID             reduce using rule 3 (elementos -> .)
    $end            reduce using rule 3 (elementos -> .)

    elementos                      shift and go to state 1

state 1

    (0) S' -> elementos .
    (1) elementos -> elementos . elemento
    (2) elementos -> elementos . vids
    (4) elemento -> . ELEMENTO NUMERO texto tipo area
    (16) vids -> . vid
    (17) vid -> . VID texto » texto
    (18) vid -> . VID texto » texto vid

    ELEMENTO        shift and go to state 4
    VID             shift and go to state 6

    elemento                       shift and go to state 2
    vids                           shift and go to state 3
    vid                            shift and go to state 5

state 2

    (1) elementos -> elementos elemento .

    ELEMENTO        reduce using rule 1 (elementos -> elementos elemento .)
    VID             reduce using rule 1 (elementos -> elementos elemento .)
    $end            reduce using rule 1 (elementos -> elementos elemento .)


state 3

    (2) elementos -> elementos vids .

    ELEMENTO        reduce using rule 2 (elementos -> elementos vids .)
    VID             reduce using rule 2 (elementos -> elementos vids .)
    $end            reduce using rule 2 (elementos -> elementos vids .)


state 4

    (4) elemento -> ELEMENTO . NUMERO texto tipo area

    NUMERO          shift and go to state 7


state 5

    (16) vids -> vid .

    ELEMENTO        reduce using rule 16 (vids -> vid .)
    VID             reduce using rule 16 (vids -> vid .)
    $end            reduce using rule 16 (vids -> vid .)


state 6

    (17) vid -> VID . texto » texto
    (18) vid -> VID . texto » texto vid
    (22) texto -> . TEXTO texto
    (23) texto -> . NUMERO texto
    (24) texto -> . TEXTO

    TEXTO           shift and go to state 9
    NUMERO          shift and go to state 10

    texto                          shift and go to state 8

state 7

    (4) elemento -> ELEMENTO NUMERO . texto tipo area
    (22) texto -> . TEXTO texto
    (23) texto -> . NUMERO texto
    (24) texto -> . TEXTO

    TEXTO           shift and go to state 9
    NUMERO          shift and go to state 10

    texto                          shift and go to state 11

state 8

    (17) vid -> VID texto . » texto
    (18) vid -> VID texto . » texto vid

    »               shift and go to state 12


state 9

    (22) texto -> TEXTO . texto
    (24) texto -> TEXTO .
    (22) texto -> . TEXTO texto
    (23) texto -> . NUMERO texto
    (24) texto -> . TEXTO

    »               reduce using rule 24 (texto -> TEXTO .)
    TIPO            reduce using rule 24 (texto -> TEXTO .)
    AREA            reduce using rule 24 (texto -> TEXTO .)
    VID             reduce using rule 24 (texto -> TEXTO .)
    ELEMENTO        reduce using rule 24 (texto -> TEXTO .)
    $end            reduce using rule 24 (texto -> TEXTO .)
    SIN             reduce using rule 24 (texto -> TEXTO .)
    VAR             reduce using rule 24 (texto -> TEXTO .)
    LINGUA          reduce using rule 24 (texto -> TEXTO .)
    NOTA            reduce using rule 24 (texto -> TEXTO .)
    TEXTO           shift and go to state 9
    NUMERO          shift and go to state 10

    texto                          shift and go to state 13

state 10

    (23) texto -> NUMERO . texto
    (22) texto -> . TEXTO texto
    (23) texto -> . NUMERO texto
    (24) texto -> . TEXTO

    TEXTO           shift and go to state 9
    NUMERO          shift and go to state 10

    texto                          shift and go to state 14

state 11

    (4) elemento -> ELEMENTO NUMERO texto . tipo area
    (5) tipo -> . TIPO texto
    (6) tipo -> .

    TIPO            shift and go to state 16
    AREA            reduce using rule 6 (tipo -> .)

    tipo                           shift and go to state 15

state 12

    (17) vid -> VID texto » . texto
    (18) vid -> VID texto » . texto vid
    (22) texto -> . TEXTO texto
    (23) texto -> . NUMERO texto
    (24) texto -> . TEXTO

    TEXTO           shift and go to state 9
    NUMERO          shift and go to state 10

    texto                          shift and go to state 17

state 13

    (22) texto -> TEXTO texto .

    »               reduce using rule 22 (texto -> TEXTO texto .)
    TIPO            reduce using rule 22 (texto -> TEXTO texto .)
    AREA            reduce using rule 22 (texto -> TEXTO texto .)
    VID             reduce using rule 22 (texto -> TEXTO texto .)
    ELEMENTO        reduce using rule 22 (texto -> TEXTO texto .)
    $end            reduce using rule 22 (texto -> TEXTO texto .)
    SIN             reduce using rule 22 (texto -> TEXTO texto .)
    VAR             reduce using rule 22 (texto -> TEXTO texto .)
    LINGUA          reduce using rule 22 (texto -> TEXTO texto .)
    NOTA            reduce using rule 22 (texto -> TEXTO texto .)


state 14

    (23) texto -> NUMERO texto .

    »               reduce using rule 23 (texto -> NUMERO texto .)
    TIPO            reduce using rule 23 (texto -> NUMERO texto .)
    AREA            reduce using rule 23 (texto -> NUMERO texto .)
    VID             reduce using rule 23 (texto -> NUMERO texto .)
    ELEMENTO        reduce using rule 23 (texto -> NUMERO texto .)
    $end            reduce using rule 23 (texto -> NUMERO texto .)
    SIN             reduce using rule 23 (texto -> NUMERO texto .)
    VAR             reduce using rule 23 (texto -> NUMERO texto .)
    LINGUA          reduce using rule 23 (texto -> NUMERO texto .)
    NOTA            reduce using rule 23 (texto -> NUMERO texto .)


state 15

    (4) elemento -> ELEMENTO NUMERO texto tipo . area
    (7) area -> . AREA texto sin
    (8) area -> . AREA texto var
    (9) area -> . AREA texto lingua

    AREA            shift and go to state 19

    area                           shift and go to state 18

state 16

    (5) tipo -> TIPO . texto
    (22) texto -> . TEXTO texto
    (23) texto -> . NUMERO texto
    (24) texto -> . TEXTO

    TEXTO           shift and go to state 9
    NUMERO          shift and go to state 10

    texto                          shift and go to state 20

state 17

    (17) vid -> VID texto » texto .
    (18) vid -> VID texto » texto . vid
    (17) vid -> . VID texto » texto
    (18) vid -> . VID texto » texto vid

  ! shift/reduce conflict for VID resolved as shift
    ELEMENTO        reduce using rule 17 (vid -> VID texto » texto .)
    $end            reduce using rule 17 (vid -> VID texto » texto .)
    VID             shift and go to state 6

  ! VID             [ reduce using rule 17 (vid -> VID texto » texto .) ]

    vid                            shift and go to state 21

state 18

    (4) elemento -> ELEMENTO NUMERO texto tipo area .

    ELEMENTO        reduce using rule 4 (elemento -> ELEMENTO NUMERO texto tipo area .)
    VID             reduce using rule 4 (elemento -> ELEMENTO NUMERO texto tipo area .)
    $end            reduce using rule 4 (elemento -> ELEMENTO NUMERO texto tipo area .)


state 19

    (7) area -> AREA . texto sin
    (8) area -> AREA . texto var
    (9) area -> AREA . texto lingua
    (22) texto -> . TEXTO texto
    (23) texto -> . NUMERO texto
    (24) texto -> . TEXTO

    TEXTO           shift and go to state 9
    NUMERO          shift and go to state 10

    texto                          shift and go to state 22

state 20

    (5) tipo -> TIPO texto .

    AREA            reduce using rule 5 (tipo -> TIPO texto .)


state 21

    (18) vid -> VID texto » texto vid .

    ELEMENTO        reduce using rule 18 (vid -> VID texto » texto vid .)
    VID             reduce using rule 18 (vid -> VID texto » texto vid .)
    $end            reduce using rule 18 (vid -> VID texto » texto vid .)


state 22

    (7) area -> AREA texto . sin
    (8) area -> AREA texto . var
    (9) area -> AREA texto . lingua
    (14) sin -> . SIN texto lingua
    (15) sin -> . SIN texto var
    (19) var -> . VAR texto lingua
    (10) lingua -> . LINGUA texto lingua
    (11) lingua -> . LINGUA texto nota
    (12) lingua -> . LINGUA texto vids
    (13) lingua -> . LINGUA texto

    SIN             shift and go to state 26
    VAR             shift and go to state 27
    LINGUA          shift and go to state 28

    sin                            shift and go to state 23
    var                            shift and go to state 24
    lingua                         shift and go to state 25

state 23

    (7) area -> AREA texto sin .

    ELEMENTO        reduce using rule 7 (area -> AREA texto sin .)
    VID             reduce using rule 7 (area -> AREA texto sin .)
    $end            reduce using rule 7 (area -> AREA texto sin .)


state 24

    (8) area -> AREA texto var .

    ELEMENTO        reduce using rule 8 (area -> AREA texto var .)
    VID             reduce using rule 8 (area -> AREA texto var .)
    $end            reduce using rule 8 (area -> AREA texto var .)


state 25

    (9) area -> AREA texto lingua .

    ELEMENTO        reduce using rule 9 (area -> AREA texto lingua .)
    VID             reduce using rule 9 (area -> AREA texto lingua .)
    $end            reduce using rule 9 (area -> AREA texto lingua .)


state 26

    (14) sin -> SIN . texto lingua
    (15) sin -> SIN . texto var
    (22) texto -> . TEXTO texto
    (23) texto -> . NUMERO texto
    (24) texto -> . TEXTO

    TEXTO           shift and go to state 9
    NUMERO          shift and go to state 10

    texto                          shift and go to state 29

state 27

    (19) var -> VAR . texto lingua
    (22) texto -> . TEXTO texto
    (23) texto -> . NUMERO texto
    (24) texto -> . TEXTO

    TEXTO           shift and go to state 9
    NUMERO          shift and go to state 10

    texto                          shift and go to state 30

state 28

    (10) lingua -> LINGUA . texto lingua
    (11) lingua -> LINGUA . texto nota
    (12) lingua -> LINGUA . texto vids
    (13) lingua -> LINGUA . texto
    (22) texto -> . TEXTO texto
    (23) texto -> . NUMERO texto
    (24) texto -> . TEXTO

    TEXTO           shift and go to state 9
    NUMERO          shift and go to state 10

    texto                          shift and go to state 31

state 29

    (14) sin -> SIN texto . lingua
    (15) sin -> SIN texto . var
    (10) lingua -> . LINGUA texto lingua
    (11) lingua -> . LINGUA texto nota
    (12) lingua -> . LINGUA texto vids
    (13) lingua -> . LINGUA texto
    (19) var -> . VAR texto lingua

    LINGUA          shift and go to state 28
    VAR             shift and go to state 27

    lingua                         shift and go to state 32
    var                            shift and go to state 33

state 30

    (19) var -> VAR texto . lingua
    (10) lingua -> . LINGUA texto lingua
    (11) lingua -> . LINGUA texto nota
    (12) lingua -> . LINGUA texto vids
    (13) lingua -> . LINGUA texto

    LINGUA          shift and go to state 28

    lingua                         shift and go to state 34

state 31

    (10) lingua -> LINGUA texto . lingua
    (11) lingua -> LINGUA texto . nota
    (12) lingua -> LINGUA texto . vids
    (13) lingua -> LINGUA texto .
    (10) lingua -> . LINGUA texto lingua
    (11) lingua -> . LINGUA texto nota
    (12) lingua -> . LINGUA texto vids
    (13) lingua -> . LINGUA texto
    (20) nota -> . NOTA texto vids
    (21) nota -> . NOTA texto
    (16) vids -> . vid
    (17) vid -> . VID texto » texto
    (18) vid -> . VID texto » texto vid

  ! shift/reduce conflict for VID resolved as shift
    ELEMENTO        reduce using rule 13 (lingua -> LINGUA texto .)
    $end            reduce using rule 13 (lingua -> LINGUA texto .)
    LINGUA          shift and go to state 28
    NOTA            shift and go to state 38
    VID             shift and go to state 6

  ! VID             [ reduce using rule 13 (lingua -> LINGUA texto .) ]

    lingua                         shift and go to state 35
    nota                           shift and go to state 36
    vids                           shift and go to state 37
    vid                            shift and go to state 5

state 32

    (14) sin -> SIN texto lingua .

    ELEMENTO        reduce using rule 14 (sin -> SIN texto lingua .)
    VID             reduce using rule 14 (sin -> SIN texto lingua .)
    $end            reduce using rule 14 (sin -> SIN texto lingua .)


state 33

    (15) sin -> SIN texto var .

    ELEMENTO        reduce using rule 15 (sin -> SIN texto var .)
    VID             reduce using rule 15 (sin -> SIN texto var .)
    $end            reduce using rule 15 (sin -> SIN texto var .)


state 34

    (19) var -> VAR texto lingua .

    ELEMENTO        reduce using rule 19 (var -> VAR texto lingua .)
    VID             reduce using rule 19 (var -> VAR texto lingua .)
    $end            reduce using rule 19 (var -> VAR texto lingua .)


state 35

    (10) lingua -> LINGUA texto lingua .

    ELEMENTO        reduce using rule 10 (lingua -> LINGUA texto lingua .)
    VID             reduce using rule 10 (lingua -> LINGUA texto lingua .)
    $end            reduce using rule 10 (lingua -> LINGUA texto lingua .)


state 36

    (11) lingua -> LINGUA texto nota .

    ELEMENTO        reduce using rule 11 (lingua -> LINGUA texto nota .)
    VID             reduce using rule 11 (lingua -> LINGUA texto nota .)
    $end            reduce using rule 11 (lingua -> LINGUA texto nota .)


state 37

    (12) lingua -> LINGUA texto vids .

    ELEMENTO        reduce using rule 12 (lingua -> LINGUA texto vids .)
    VID             reduce using rule 12 (lingua -> LINGUA texto vids .)
    $end            reduce using rule 12 (lingua -> LINGUA texto vids .)


state 38

    (20) nota -> NOTA . texto vids
    (21) nota -> NOTA . texto
    (22) texto -> . TEXTO texto
    (23) texto -> . NUMERO texto
    (24) texto -> . TEXTO

    TEXTO           shift and go to state 9
    NUMERO          shift and go to state 10

    texto                          shift and go to state 39

state 39

    (20) nota -> NOTA texto . vids
    (21) nota -> NOTA texto .
    (16) vids -> . vid
    (17) vid -> . VID texto » texto
    (18) vid -> . VID texto » texto vid

  ! shift/reduce conflict for VID resolved as shift
    ELEMENTO        reduce using rule 21 (nota -> NOTA texto .)
    $end            reduce using rule 21 (nota -> NOTA texto .)
    VID             shift and go to state 6

  ! VID             [ reduce using rule 21 (nota -> NOTA texto .) ]

    vids                           shift and go to state 40
    vid                            shift and go to state 5

state 40

    (20) nota -> NOTA texto vids .

    ELEMENTO        reduce using rule 20 (nota -> NOTA texto vids .)
    VID             reduce using rule 20 (nota -> NOTA texto vids .)
    $end            reduce using rule 20 (nota -> NOTA texto vids .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for VID in state 17 resolved as shift
WARNING: shift/reduce conflict for VID in state 31 resolved as shift
WARNING: shift/reduce conflict for VID in state 39 resolved as shift
